# org3d

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: impacted-tests.sh
src/: autogroup.rs  db.rs  extract.rs  lib.rs  main.rs  rename.rs  scanner.rs  server.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: pick-folder.toml
src-tauri/src/: lib.rs  main.rs
src/formats/: mod.rs  stl.rs  threemf.rs
templates/: cards.html  detail.html  gallery.html  pagination.html  project_widget.html  projects.html  settings.html
tests/: gallery.rs  health.rs
tests/common/: mod.rs
